0024008: ShapeAnalysis_Surface causes exception in Geom_OffsetSurface

Refactoring on current master fix for bug 0024008: ShapeAnalysis_Surface causes exception in Geom_OffsetSurface.
And modified test scripts in order to avoid report regressions
Test cases for issue CR24008